--- a/IEC104_dotnet/IEC104_dotnet.csproj
+++ b/IEC104_dotnet/IEC104_dotnet.csproj
@@ -44,6 +44,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="IEC104ProtocolHdl.cs" />
+    <Compile Include="IEC104Device.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -82,10 +84,6 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="IEC104DeviceBase.cs" />
-    <Compile Include="IEC104Protocol.cs" />
-    <Compile Include="IEC104Device.cs" />
-    <Compile Include="IEC104Protocol %28copy%29.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
